syntax = "proto3";

//package com.hoperise.grpc.proto;
package protobuf;

option java_multiple_files = true;
option java_package = "com.hoperise.proto";

message EventRequest {
  string timestamp = 1;
  string microserviceName = 2;
  string user = 3;
  string action = 4;
  string resource = 5;
  string responseType = 6;
}

message EventResponse {
  string response = 1;
}

service EventService {
  rpc logEvent(EventRequest) returns (EventResponse);
}